@@ -101,8 +101,8 @@ stamp-h1
 /include/libsmraw/types.h
 /libsmraw/libsmraw.rc
 /libsmraw/libsmraw_definitions.h
-/smrawtools/smrawinfo
 /smrawtools/smrawverify
+/smrawtools/smrawmount
 /tests/input
 /tests/smraw_test_open_close
 /tests/smraw_test_read
@@ -120,6 +120,8 @@ stamp-h1
 /libcnotify
 /libcpath
 /libcsplit
+/libcstring
+/libcsystem
 /libcthreads
 /libfcache
 /libfdata
