@@ -52,7 +52,6 @@ SPEC_FILES = \
 	libsmraw.spec.in
 
 EXTRA_DIST = \
-	README.macosx \
 	$(DPKG_FILES) \
 	$(GETTEXT_FILES) \
 	$(PKGCONFIG_FILES) \
