@@ -1,17 +1,0 @@
-Mac OS X
-* missing libtoolize
-* building multiple architure binaries
-* building smrawmount
-
-
-Missing libtoolize
-Use glibtoolize instead
-
-
-Building multiple architecture binaries
-See: http://code.google.com/p/libsmraw/wiki/Building
-
-
-Building smrawmount
-See: http://code.google.com/p/libsmraw/wiki/Mounting
-
