@@ -1,0 +1,73 @@
+[Project]
+name: "libsmraw"
+status: "alpha"
+features: [
+    "debug_output", "tests", "tools", "python",
+    "source_package",
+    "cygwin", "gcc", "mingw", "msvscpp",
+    "dpkg", "rpm",
+    "dokan", "fuse"]
+
+[source_package]
+url: "https://googledrive.com/host/0B3fBvzttpiiSRml2cndCelp2R3M/"
+
+[git]
+url: "https://code.google.com/p/libsmraw/"
+
+[tests]
+features: ["valgrind"]
+profiles: ["libsmraw", "pysmraw", "smrawverify"]
+example_filename1: "image1.raw"
+example_filename2: "image2.raw"
+
+[tools]
+directory: "smrawtools"
+names: ["smrawmount", "smrawverify"]
+
+[cygwin]
+build_dependencies: [
+    "openssl-devel (optional but recommended)"]
+dll_dependencies: [
+    "*TODO describe dependencies*"]
+dll_filename: "cygsmraw-0.dll"
+
+[gcc]
+build_dependencies: [
+    "libcrypto (part of OpenSSL) (optional but recommended)"]
+static_build_dependencies: [
+    "libcrypto (part of OpenSSL) (optional but recommended, can be disabled by --with-openssl=no)"]
+
+[mingw]
+build_dependencies: [
+    "Windows Crypto API (libadvapi32) (optional but recommended)"]
+dll_dependencies: [
+    "*TODO describe dependencies*"]
+dll_filename: "libsmraw-1.dll"
+
+[msvscpp]
+build_dependencies: [
+    "Windows Crypto API (libadvapi32) (optional but recommended)"]
+dll_dependencies: []
+
+[dpkg]
+build_dependencies: [
+    "libssl-dev"]
+
+[rpm]
+build_dependencies: [
+    "openssl-devel"]
+
+[mount_tool]
+missing_backend_error: "No sub system to mount SMRAW format."
+mount_point: "/mnt/smrawimage/"
+mounted_description: "a device file that provides the RAW volume data contained in the (split) RAW image"
+mounted_dokan: "X:\\RAW1"
+mounted_fuse: "/mnt/smrawimage/raw1"
+source: "image.raw.000"
+source_description: "a (split) RAW image"
+source_type: "image"
+supported_backends: [
+    "Dokan library",
+    "fuse",
+    "OSXFuse"]
+
