@@ -1,0 +1,94 @@
+Name: libsmraw
+Version: @VERSION@
+Release: 1
+Summary: Library to access the storage media (SM) (split) RAW format
+Group: System Environment/Libraries
+License: LGPL
+Source: %{name}-%{version}.tar.gz
+URL: http://code.google.com/p/libsmraw/
+BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
+@libsmraw_spec_requires@ @ax_libbfio_spec_requires@ @ax_libcdata_spec_requires@ @ax_libcerror_spec_requires@ @ax_libcfile_spec_requires@ @ax_libclocale_spec_requires@ @ax_libcnotify_spec_requires@ @ax_libcpath_spec_requires@ @ax_libcsplit_spec_requires@ @ax_libcstring_spec_requires@ @ax_libcthreads_spec_requires@ @ax_libfcache_spec_requires@ @ax_libfdata_spec_requires@ @ax_libfvalue_spec_requires@ @ax_libuna_spec_requires@
+@libsmraw_spec_build_requires@ @ax_libbfio_spec_build_requires@ @ax_libcdata_spec_build_requires@ @ax_libcerror_spec_build_requires@ @ax_libcfile_spec_build_requires@ @ax_libclocale_spec_build_requires@ @ax_libcnotify_spec_build_requires@ @ax_libcpath_spec_build_requires@ @ax_libcsplit_spec_build_requires@ @ax_libcstring_spec_build_requires@ @ax_libcthreads_spec_build_requires@ @ax_libfcache_spec_build_requires@ @ax_libfdata_spec_build_requires@ @ax_libfvalue_spec_build_requires@ @ax_libuna_spec_build_requires@
+
+%description
+libsmraw is library to access the storage media (SM) (split) RAW format
+The library supports both RAW and split RAW.
+
+%package devel
+Summary: Header files and libraries for developing applications for libsmraw
+Group: Development/Libraries
+Requires: libsmraw = %{version}-%{release}
+
+%description devel
+Header files and libraries for developing applications for libsmraw.
+
+%package tools
+Summary: Several tools for reading and writing storage media (SM) (split) RAW files
+Group: Applications/System
+Requires: libsmraw = %{version}-%{release} @ax_libcrypto_spec_requires@ @ax_libcsystem_spec_requires@ @ax_libfuse_spec_requires@ @ax_libhmac_spec_requires@
+@libsmraw_tools_spec_build_requires@ @ax_libcrypto_spec_build_requires@ @ax_libcsystem_spec_build_requires@ @ax_libfuse_spec_build_requires@ @ax_libhmac_spec_build_requires@
+
+%description tools
+Several tools for reading and writing storage media (SM) (split) RAW files.
+It contains tools to acquire, export, query and verify storage media (SM) (split) RAW files.
+
+%package python
+Summary: Python bindings for libsmraw
+Group: System Environment/Libraries
+Requires: libsmraw = %{version}-%{release} python
+BuildRequires: python-devel
+
+%description python
+Python bindings for libsmraw
+
+%prep
+%setup -q
+
+%build
+%configure --prefix=/usr --libdir=%{_libdir} --mandir=%{_mandir} --enable-python
+make %{?_smp_mflags}
+
+%install
+rm -rf ${RPM_BUILD_ROOT}
+make DESTDIR=${RPM_BUILD_ROOT} install
+
+%clean
+rm -rf ${RPM_BUILD_ROOT}
+
+%post -p /sbin/ldconfig
+
+%postun -p /sbin/ldconfig
+
+%files
+%defattr(644,root,root,755)
+%doc AUTHORS COPYING NEWS README
+%attr(755,root,root) %{_libdir}/*.so.*
+
+%files devel
+%defattr(644,root,root,755)
+%doc AUTHORS COPYING NEWS README ChangeLog
+%{_libdir}/*.a
+%{_libdir}/*.la
+%{_libdir}/*.so
+%{_libdir}/pkgconfig/libsmraw.pc
+%{_includedir}/*
+%{_mandir}/man3/*
+
+%files tools
+%defattr(644,root,root,755)
+%doc AUTHORS COPYING NEWS README
+%attr(755,root,root) %{_bindir}/smrawmount
+%attr(755,root,root) %{_bindir}/smrawverify
+%{_mandir}/man1/*
+
+%files python
+%defattr(644,root,root,755)
+%doc AUTHORS COPYING NEWS README
+%{_libdir}/python*/site-packages/*.a
+%{_libdir}/python*/site-packages/*.la
+%{_libdir}/python*/site-packages/*.so
+
+%changelog
+* @SPEC_DATE@ Joachim Metz <joachim.metz@gmail.com> @VERSION@-1
+- Auto-generated
+
